alignment fixed on careerpage

--- a/src/CSS/CareersPage.module.css
+++ b/src/CSS/CareersPage.module.css
@@ -517,7 +517,7 @@
 
 .richContent {
   max-width: 900px;
-  margin: 10px auto;
+  margin: 10px 0px;
   color: #eaeaea;
   line-height: 1.75;
   font-size: 17px;
